Fixed appearance on smaller screens

--- a/style.css
+++ b/style.css
@@ -142,8 +142,8 @@ table {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr;
-    width: 600px;
-    height:600px;
+    width: 30vw;
+    aspect-ratio: 1;
     margin-top: 50px;
     background-color: rgb(52, 75, 109);
 }
